--- a/projects/msvc15/GLideN64.vcxproj
+++ b/projects/msvc15/GLideN64.vcxproj
@@ -151,6 +151,9 @@
     <PostBuildEvent>
       <Message>Copy result to plugins folder</Message>
     </PostBuildEvent>
+    <PreBuildEvent>
+      <Command>call ..\..\src\getRevision.bat</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug_mupenplus|Win32'">
     <ClCompile>
@@ -181,6 +184,9 @@
       <Message>Copy result to plugins folder</Message>
       <Command>copy /Y "$(OutDir)$(TargetName).*" "$(Mupen64PluginsDir)"</Command>
     </PostBuildEvent>
+    <PreBuildEvent>
+      <Command>call ..\..\src\getRevision.bat</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug_mupenplus_uniformset|Win32'">
     <ClCompile>
@@ -244,6 +250,9 @@
       <Command>copy /Y "$(OutDir)$(TargetName).*" "$(N64PluginsDir)"</Command>
       <Message>Copy result to plugins folder</Message>
     </PostBuildEvent>
+    <PreBuildEvent>
+      <Command>call ..\..\src\getRevision.bat</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release_mupenplus|Win32'">
     <ClCompile>
@@ -282,6 +291,9 @@
     <PostBuildEvent>
       <Message>Copy result to plugins folder</Message>
     </PostBuildEvent>
+    <PreBuildEvent>
+      <Command>call ..\..\src\getRevision.bat</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\3DMath.cpp" />
