--- a/projects/msvc15/GLideN64.vcxproj
+++ b/projects/msvc15/GLideN64.vcxproj
@@ -145,7 +145,8 @@
       <AdditionalLibraryDirectories>lib/dbg</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(ProjectDir)$(OutDir)$(TargetName).*" "$(N64PluginsDir)"
+      <Command>if not exist "$(N64PluginsDir)" mkdir "$(N64PluginsDir)"
+copy /Y "$(ProjectDir)$(OutDir)$(TargetName).*" "$(N64PluginsDir)"
 </Command>
     </PostBuildEvent>
     <PostBuildEvent>
@@ -182,7 +183,8 @@
     </Link>
     <PostBuildEvent>
       <Message>Copy result to plugins folder</Message>
-      <Command>copy /Y "$(ProjectDir)$(OutDir)$(TargetName).*" "$(Mupen64PluginsDir)"</Command>
+      <Command>if not exist "$(Mupen64PluginsDir)" mkdir "$(Mupen64PluginsDir)"
+copy /Y "$(ProjectDir)$(OutDir)$(TargetName).*" "$(Mupen64PluginsDir)"</Command>
     </PostBuildEvent>
     <PreBuildEvent>
       <Command>call ..\..\src\getRevision.bat</Command>
@@ -247,7 +249,8 @@
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(ProjectDir)$(OutDir)$(TargetName).*" "$(N64PluginsDir)"</Command>
+      <Command>if not exist "$(N64PluginsDir)" mkdir "$(N64PluginsDir)"
+copy /Y "$(ProjectDir)$(OutDir)$(TargetName).*" "$(N64PluginsDir)"</Command>
       <Message>Copy result to plugins folder</Message>
     </PostBuildEvent>
     <PreBuildEvent>
@@ -286,7 +289,8 @@
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
     <PostBuildEvent>
-      <Command>copy /Y "$(ProjectDir)$(OutDir)$(TargetName).*" "$(Mupen64PluginsDir)"</Command>
+      <Command>if not exist "$(Mupen64PluginsDir)" mkdir "$(Mupen64PluginsDir)"
+copy /Y "$(ProjectDir)$(OutDir)$(TargetName).*" "$(Mupen64PluginsDir)"</Command>
     </PostBuildEvent>
     <PostBuildEvent>
       <Message>Copy result to plugins folder</Message>
