Add more files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ Roms/
 *.suo
 *.sdf
 *.user
+projects/msvc15/*db
+projects/msvc15/GeneratedFiles
+projects/msvc12/*db
+projects/msvc12/GeneratedFiles
+src/Revision.h
