Added Vero4k build flags to detect libGLESv2.so path.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ option(PANDORA "Set to ON if targeting an OpenPandora" ${PANDORA})
 option(ODROID "Set to ON if targeting an Odroid" ${ODROID})
 option(MUPENPLUSAPI "Set to ON for Mupen64Plus plugin" ${MUPENPLUSAPI})
 option(MESA "Set to ON to disable Raspberry Pi autodetection" ${MESA})
+option(VERO4K "Set to ON if targeting a Vero4k" ${VERO4K})
 
 project( GLideN64 )
 
@@ -231,6 +232,12 @@ if(ODROID)
   -DODROID
    )
 endif(ODROID)
+
+if(VERO4K)
+  add_definitions(
+  -DVERO4K
+   )
+endif(VERO4K)
 
 if(UNIX OR BCMHOST)
   SET( FREETYPE_INCLUDE_DIRS "/usr/include/freetype2/" )
