--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -92,10 +92,11 @@ set(GLideN64_SOURCES
   uCodes/F3DZEX2.cpp
   uCodes/F3DFLX2.cpp
   uCodes/F3DGOLDEN.cpp
-  uCodes/F3DSWRS.cpp
   uCodes/F3DTEXA.cpp
   uCodes/F3DPD.cpp
   uCodes/F3DSETA.cpp
+  uCodes/F5Indi_Naboo.cpp
+  uCodes/F5Rogue.cpp
   uCodes/L3D.cpp
   uCodes/L3DEX2.cpp
   uCodes/L3DEX.cpp
